<resources>
    <string name="app_name">Queens pasteleria</string>
    <string name="title_activity_principal">Principal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sin_usuario"> Inicie Sesion o cree usuario</string>
    <string name="action_settings">Settings</string>

    <!-- strings del menu -->
    <string name="productos">Productos</string>
    <string name="Pedidos">Pedidos</string>
    <string name="Salir">Salir</string>
    <string name="ingresar">Ingresar</string>
    <string name="Usuario">Perfil De Usuario</string>

    <!-- titulos del toolbar -->
    <string name="titulo_principal">Queens Pasteleria</string>
    <string name="crear_usuario">Crear Usuario</string>
    <string name="usuario">Usuario</string>
    <string name="cambiar_contrasenia">Enviar Correo Electronico</string>

    <!--- strings formulario-->
    <string name="nombre_formulario">Nombres:</string>
    <string name="apellido_formulario">Apellidos:</string>
    <string name="contrasenia_formulario"> Contraseña:</string>
    <string name="repita_contrasenia_formulario">Repita la  contraseña:</string>
    <string name="contrasena_olvidada_formulario">Se me olvido la contraseña</string>
    <string name="nuevo_usuario">Soy nuevo usuario</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="crear_usuario_formulario">Crear Usuario</string>
    <string name="usuario_formulario">Usuario:</string>
    <string name="nit">Nit:</string>
    <string name="direccion">Dirección:</string>
    <string name="correo_formulario">Correo:</string>
    <string name="telefono_formulario">Telefono:</string>

    <!--Strings para pedido -->
    <string name="rebanadas">dividir en Rebanadas</string>
    <string name="cantidadDeRebanadas">Cantidad de Rebanadas</string>
    <string name="fechaEntrega">fecha De Entrega</string>
    <string name="fotografia">fotografia para Diseño</string>
    <string name="detalles">Detalles Extras:</string>
    <string name="agregarProductos">agregar \n Productos</string>
    <string name="finalizarCompra">Finalizar \n Compra</string>

    <!--Strings para pago-->
    <string name="Pago">¿Como desea hacer su Pago?</string>
    <string name="efectivo">en Efectivo</string>
    <string name="Deposito">en Deposito</string>

    <!--Strings para direccion-->
    <string name="direccionP">¿A que dirección se los enviamos?</string>
    <string name="delUsuario">del Usuario</string>
    <string name="nuevaDireccion">nueva Dirección</string>
    <string name="preguntaNuevaDireccion">nueva Dirección</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings Oferta -->
    <string name="fechaInicio">Fecha de Inicio:</string>
    <string name="fechaFinalizacio">Fecha de Finalización:</string>
    <string name="cantidaCompra">Cantidad de Compra:</string>
    <string name="search">buscar</string>
    <string name="recuperar_contrasenia">recuperar contraseña</string>

</resources>
