<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Pasteles"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/productos" />
        <item
            android:id="@+id/Pedidos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/Pedidos" />
        <item
            android:id="@+id/usuario"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/Usuario" />
        <item
            android:id="@+id/login"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/ingresar" />
    </group>


</menu>
