<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ati.queenspasteleria.view.fragments.PedidoFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/fab_margin">

        <TextView
            android:id="@+id/txWNombreProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <CheckBox
            android:id="@+id/cbRebanadasCortadas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/rebanadas" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txICantidadRebanadas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/cantidadDeRebanadas"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txIFechaEntrega"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/fechaEntrega"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:inputType="date" />

        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btFotografia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/RaiseButtonDark"
            android:text="@string/fotografia" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txIDetalles"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/detalles"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:inputType="textMultiLine" />


        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal"></LinearLayout>
        <Button
            android:id="@+id/btAgregarProductos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/RaiseButtonDark"
            android:text="@string/agregarProductos" />
        <Button
            android:id="@+id/btFinalizarCompra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/RaiseButtonDark"
            android:text="@string/finalizarCompra" />


        </LinearLayout>
    </LinearLayout>
</FrameLayout>
