<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ati.queenspasteleria.view.fragments.LoginFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="81dp">

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="408dp"
            android:orientation="vertical"
            android:padding="@dimen/fab_margin">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/usuario_formulario" />

            <EditText
                android:id="@+id/usuarioLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contrasenia_formulario" />

            <EditText
                android:id="@+id/contraseniaLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/RaiseButtonDark"
                android:text="@string/iniciar_sesion" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contrasena_olvidada_formulario"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Notification.Line2.Media" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
