<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ati.queenspasteleria.view.fragments.TipoDePagoFragment">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/fab_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="2"></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.75">

        <TextView
            android:id="@+id/txWPago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Pago"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textSize="24sp" />
        <Button
            android:id="@+id/btDeposito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/RaiseButtonDark"
            android:text="@string/Deposito"
            />
        <Button
            android:id="@+id/btEfectivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/RaiseButtonDark"
            android:text="@string/efectivo"
           />
    </LinearLayout>
    </LinearLayout>

</FrameLayout>
